test_suite/tests/ui/rename/variant_unknown_rename_rule.stderr
error: unknown rename rule for #[serde(rename_all = "abc")] a list of possible options ["lowercase", "UPPERCASE", "PascalCase", "camelCase", "snake_case", "SCREAMING_SNAKE_CASE", "kebab-case", "SCREAMING-KEBAB-CASE"]
 --> $DIR/variant_unknown_rename_rule.rs:5:26
  |
5 |     #[serde(rename_all = "abc")]
  |                          ^^^^^
